revised w2v and changed FB15k to FB15K everywhere(including in simil notebook).

--- a/similarity_notebook.ipynb
+++ b/similarity_notebook.ipynb
@@ -26,8 +26,8 @@
     "- `./OpenKE/benchmarks/FB15K/entity2id.txt` : \\[/mid int\\].  \n",
     "    - Used for translating similarity df from previous step to a df with this structure: \\[ /mid /similar_to /mid \\] .\n",
     "    - Also used by Word2vec notebook.\n",
-    "- `./FB15k/mid2name.tsv` : \\[ /mid word \\]. Used by word2vec notebook.\n",
-    "- `./FB15k/train.txt` : \\[/mid /mid /mid\\]. Used by AMIE. Thus, enrichement must happen on this file."
+    "- `./FB15K/mid2name.tsv` : \\[ /mid word \\]. Used by word2vec notebook.\n",
+    "- `./FB15K/train.txt` : \\[/mid /mid /mid\\]. Used by AMIE. Thus, enrichement must happen on this file."
    ]
   },
   {
@@ -375,10 +375,7 @@
      "start_time": "2020-05-13T02:31:10.626565Z"
     },
     "code_folding": [
-     0,
-     4,
-     8,
-     14
+     0
     ]
    },
    "outputs": [],
@@ -835,10 +832,10 @@
     "    \"\"\"\n",
     "    import datetime\n",
     "    new_name = new_name + str(datetime.datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
-    "    dest = './FB15k/train_'+ new_name + '.txt'\n",
+    "    dest = './FB15K/train_'+ new_name + '.txt'\n",
     "    while os.path.isfile(dest):\n",
     "        new_name = input(\"File already exists. Give another name: \")\n",
-    "        dest = './FB15k/train_'+ new_name + '.txt'\n",
+    "        dest = './FB15K/train_'+ new_name + '.txt'\n",
     "    \n",
     "    heads = list(input_df['head']) \n",
     "    tails = list(input_df['tail']) \n",
@@ -853,7 +850,7 @@
     "    df = pd.DataFrame(data=d)\n",
     "\n",
     "    from shutil import copyfile\n",
-    "    copyfile('./FB15k/train.txt', dest)\n",
+    "    copyfile('./FB15K/train.txt', dest)\n",
     "    df.to_csv(dest, mode='a', header=False,index=False, sep='\\t')\n",
     "    return dest"
    ]
@@ -1014,9 +1011,9 @@
    },
    "outputs": [],
    "source": [
-    "train_add = \"./FB15k/train.txt\"\n",
-    "test_add = \"FB15k/test.txt\"\n",
-    "valid_add = \"FB15k/valid.txt\"\n",
+    "train_add = \"./FB15K/train.txt\"\n",
+    "test_add = \"FB15K/test.txt\"\n",
+    "valid_add = \"FB15K/valid.txt\"\n",
     "\n",
     "rules_add = \"rules/baseline_rules.txt\"\n",
     "eval_add = \"evaluation/baseline_rules_eval.txt\""
@@ -1317,12 +1314,12 @@
    "source": [
     "# For each enriched training file, apply AMIE and show its HIT@10 performance\n",
     "for name in train_file_name:\n",
-    "    train_add = \"FB15k/train\" +  name[13:] # From append module\n",
+    "    train_add = \"FB15K/train\" +  name[13:] # From append module\n",
     "    rules_add = \"rules/Enriched_rules\" + name[13:] # modify this name if you like\n",
     "    eval_add = \"evaluation/Enriched_eval\" + name[13:] # same here\n",
     "\n",
-    "    test_add = \"FB15k/test.txt\"\n",
-    "    valid_add = \"FB15k/valid.txt\"\n",
+    "    test_add = \"FB15K/test.txt\"\n",
+    "    valid_add = \"FB15K/valid.txt\"\n",
     "\n",
     "    print(\"The enriched tr file: \" + train_add)\n",
     "    print(\"Rules will be saved at: \"+ rules_add)\n",
