add method attribute and upload AMIE_Doc

--- a/AMIE_Doc.ipynb
+++ b/AMIE_Doc.ipynb
@@ -4,13 +4,41 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sub\n"
+     ]
+    }
+   ],
    "source": [
     "from pkgX.xClass import xSimilarity\n",
     "\n",
     "x = xSimilarity()\n",
     "\n",
-    "x.current_dataset = 'FB15K237'"
+    "x.current_dataset = 'FB15K237'\n",
+    "x.method = 'sub'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = x.load_from_npz(x.method+'_'+ x.current_dataset + '.npz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for percent in [5,10,15,20]:\n",
+    "    x.filter_and_append(df,percent)"
    ]
   },
   {
