AMIE_Doc-> added instll_openKE()

--- a/AMIE_Doc.ipynb
+++ b/AMIE_Doc.ipynb
@@ -17,6 +17,7 @@
     "from pkgX.xClass import xSimilarity\n",
     "\n",
     "x = xSimilarity()\n",
+    "x.install_openke('git')\n",
     "\n",
     "x.current_dataset = 'FB15K237' \n",
     "x.method = 'sub' # 'distMult' , 'cosD'"
